--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!--loading start-->
       <div id="pq-loading">
          <div id="pq-loading-center">
-            <img src="images/logo.png" class="img-fluid" alt="loading">
+            <img src="images/logo.webp" class="img-fluid" alt="loading">
          </div>
       </div>
       <!--loading End-->
@@ -81,7 +81,7 @@
                      <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                            <a class="navbar-brand" href="index.html">
-                              <img class="img-fluid logo" src="images/logo.png" alt="medicate">
+                              <img class="img-fluid logo" src="images/logo.webp" alt="medicate">
                            </a>
                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                               <div id="pq-menu-contain" class="pq-menu-contain">
