--- a/index.html
+++ b/index.html
@@ -622,12 +622,12 @@
             <div class="pq-footer-top container ">
                <div class="row align-items-center">
                   <div class="col-lg-12">
-                     <div class="pq-subscribe-block">
+                     <!-- <div class="pq-subscribe-block"> -->
                         <div class="pq-subscribe-details">
-                           <h5>Subs To News Letter</h5> 
+                           <h5 class="text-white">Subs To News Letter</h5> 
                            <p>Consetetur dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna</p>
                         </div>
-                        </div>
+                        <!-- </div> -->
                      </div>
                      <div class="col-lg-12 align-self-center">
                         <div class="pq-subscribe-from">
@@ -665,7 +665,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="col-xl-3  col-md-6">
+                                    <div class="col-xl-6  col-md-6">
                                        <div class="pq-footer-block">
                                           <h4 class="footer-title">Our Courses</h4>
                                           <div class="menu-useful-links-container">
@@ -684,27 +684,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="col-xl-3  col-md-6">
-                                       <div class="pq-footer-block">
-                                          <h4 class="footer-title">Recent Posts</h4>
-                                          <div class="pq-footer-recent-post">
-                                             <div class="pq-footer-recent-post-media">
-                                                <a href="get-the-exercise-limited-mobility.html"> <img src="images/footer-image/1.jpg" alt=""></a>
-                                             </div>
-                                             <div class="pq-footer-recent-post-info">
-                                                <a href="get-the-exercise-limited-mobility.html" class="pq-post-date"> <i class="far fa-calendar-alt"></i>December <span>12</span>, 2021 </a>
-                                                <h6><a href="get-the-exercise-limited-mobility.html">Get the Exercise Limited Mobility</a></h6> </div>
-                                             </div>
-                                             <div class="pq-footer-recent-post">
-                                                <div class="pq-footer-recent-post-media">
-                                                   <a href="get-the-exercise-limited-mobility.html"> <img src="images/footer-image/2.jpg" alt=""></a>
-                                                </div>
-                                                <div class="pq-footer-recent-post-info">
-                                                   <a href="get-the-exercise-limited-mobility.html" class="pq-post-date"> <i class="far fa-calendar-alt"></i>December <span>12</span>, 2021 </a>
-                                                   <h6><a href="get-the-exercise-limited-mobility.html">Transfusion strategy and heart surgery</a></h6> </div>
-                                                </div>
-                                             </div>
-                                          </div>
+                                  
                                           <div class="col-xl-3  col-md-6">
                                              <div class="pq-footer-block">
                                                 <h4 class="footer-title">Contact Us</h4>
