--- a/test.html
+++ b/test.html
@@ -31,13 +31,24 @@
     <link rel="stylesheet" href="css/style.css">
     <!--  Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
-    <script src="https://cdn.tailwindcss.com">
-    </script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <style>
+        .surgery-box {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 15px;
+            margin: 10px;
+        }
+        .surgery-box img {
+            width: 100%;
+            border-radius: 10px;
+        }
+    </style>
 </head>
+
+
 
 <body>
     <!--loading start-->
@@ -451,205 +462,67 @@
             </section> -->
     <!--Section about-us End-->
     <!--Section service start-->
-    <div class="max-w-7xl mx-auto p-6 flex flex-col md:flex-row items-center">
-        <div class="md:w-2/3">
-            <h2 class="text-blue-600 text-lg mb-2">
-                About the doctor
-            </h2>
-            <h1 class="text-green-700 text-2xl font-bold mb-4">
-                Dr. (Major) Rajesh Bhardwaj MBBS (AFMC), MS, DNB, DLO, DHA
-            </h1>
-            <p class="text-gray-700 mb-4">
-                Dr. (Major) Bhardwaj graduated from Armed Forces Medical College (AFMC), Pune in 1982 and served in the
-                Indian Army for 15 years, where he gained vast clinical experience as an
-                <span class="text-blue-600 underline">
-                    ENT specialist
-                </span>
-                . He has served in the largest and busiest hospitals of the armed forces including Command Hospitals at Pune
-                and Chandigarh and at the Army Hospital (R&amp;R), Delhi Cantt.
-            </p>
-            <button class="bg-green-600 text-white px-6 py-2 rounded-full">
-                Read more
-            </button>
-        </div>
-        <div class="md:w-1/3 mt-6 md:mt-0 md:ml-6">
-            <img alt="Dr. (Major) Rajesh Bhardwaj in medical attire" class="rounded-lg shadow-lg" height="400"
-                src="https://storage.googleapis.com/a1aa/image/93NvQi3DsvCPTOjFRO5gQmKNUl8ogpSgoOGHVhLx5mc.jpg"
-                width="400" />
-        </div>
-    </div>
-    <div class="max-w-7xl mx-auto p-6">
-        <h2 class="text-blue-700 text-lg font-semibold mb-2">What we do</h2>
-        <h1 class="text-green-700 text-2xl font-bold mb-4">ENT Consultation, Surgeries & Treatment</h1>
-        <p class="text-gray-800 mb-2">
-            MedFirst ENT Centre was established in 1997. Since then it has undergone regular improvements and upgradation to
-            become a centre of excellence for the diagnosis and management of ENT disorders in the NCR. We get patients from
-            all over India and overseas as well.
-        </p>
-        <p class="text-gray-800">
-            We offer the latest technology and equipment and expertise in the management of ENT diseases.
-        </p>
-    </div>
-    <section class="bg-white flex items-center justify-center max-w-7xl mx-auto p-6">
-        <div class="text-center">
-            <h1 class="text-2xl font-bold mb-6">
-                ALL ENT SURGERIES
-            </h1>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-                <div class="border-2 border-green-500 rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Tonsillectomy" class="mb-2" src="https://placehold.co/50x50" />
-                    <span class="text-green-500">
-                        Tonsillectomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Adenoidectomy" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/dXpv2COacT6dFDve9D7Q96H7UU53ljcaShcdhByhdDQ.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Adenoidectomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Myringoplasty" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/nHNeI_TMAZbBWAPqaJFKpS3sgeu5ZDw21VRexiHXrDY.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Myringoplasty
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Myringotomy" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/9_t456camcYEwVoOc9b62Bn90P0CvUHfeOvGAU5nSc4.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Myringotomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Septoplasty" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/PnyY-_08GWXiZN8NZDM3nFw2ed_faiTxEeTGxcPSmmc.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Septoplasty
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing FESS" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/ufA4_FYmqYHb0Z39BB8DXGJme8uCac9bZpKavA_E-xw.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        FESS
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Turbinectomy" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/GmGjatud-P4aTjaB15I9Bkd5Je3cPU3cxnToX6AuAu8.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Turbinectomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Nasal Polypectomy" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/bREtF84A9xA4dqpQ-RtmlFPUF6YYMleptCrZb4FlOMM.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Nasal Polypectomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Snoring &amp; Sleep Apnea Surgery" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/1l6S9IXhHjimPy4d4Nr_1N5bez-vMmk3fr3gK0jVlJM.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Snoring &amp; Sleep Apnea Surgery
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Mastoidectomy" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/n0_h7d35yTE_G7AN2QweuHTvtbL2p_soTSSHXkbkXcc.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Mastoidectomy
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing MLS" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/HwodJAdAwXvaKYHb2FazLTy0NREVu8RMPenxI7h0UWM.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        MLS
-                    </span>
-                </div>
-                <div class="border rounded-lg p-4 flex flex-col items-center">
-                    <img alt="Icon representing Removal of Neck Swelling" class="mb-2" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/WgcPit1OdZE6ovAeig_FbnXH8Rv3_DDoct5-lX4NQyo.jpg"
-                        width="50" />
-                    <span class="text-green-500">
-                        Removal of Neck Swelling
-                    </span>
+    <div class="container text-center mt-4">
+        <h3 class="fw-bold">ALL ENT SURGERIES</h3>
+        <div class="row">
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Tonsillectomy">
                 </div>
             </div>
-        </div>
-    </section>
-    <div class="container mx-auto p-4">
-        <h1 class="text-center text-2xl font-bold mb-4">FOLLOW US ON YOUTUBE</h1>
-        <div class="flex flex-col md:flex-row">
-            <div class="flex-1 p-4">
-                <div class="relative">
-                    <img src="https://placehold.co/600x400"
-                        alt="Doctor explaining the difference between migraine and sinus headache"
-                        class="w-full rounded-lg shadow-lg">
-                    <div class="absolute inset-0 flex items-center justify-center">
-                        <i class="fas fa-play-circle text-red-600 text-6xl"></i>
-                    </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Adenoidectomy">
                 </div>
-                <h2 class="mt-4 text-lg font-bold">What is Septoplasty sugery?</h2>
-                <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
             </div>
-            <div class="flex-1 p-4">
-                <div class="bg-white rounded-lg shadow-lg p-4 overflow-y-auto" style="max-height: 465px;">
-                    <div class="flex mb-4">
-                        <img src="https://placehold.co/120x80" alt="Thumbnail of a video about Septoplasty surgery"
-                            class="w-24 h-16 rounded-lg">
-                        <div class="ml-4">
-                            <h3 class="text-lg font-bold text-green-700">What is Septoplasty sugery?</h3>
-                            <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
-                        </div>
-                    </div>
-                    <div class="flex mb-4">
-                        <img src="https://placehold.co/120x80" alt="Thumbnail of a video about Septoplasty surgery"
-                            class="w-24 h-16 rounded-lg">
-                        <div class="ml-4">
-                            <h3 class="text-lg font-bold text-green-700">What is Septoplasty sugery?</h3>
-                            <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
-                        </div>
-                    </div>
-                    <div class="flex mb-4">
-                        <img src="https://placehold.co/120x80" alt="Thumbnail of a video about Septoplasty surgery"
-                            class="w-24 h-16 rounded-lg">
-                        <div class="ml-4">
-                            <h3 class="text-lg font-bold text-green-700">What is Septoplasty sugery?</h3>
-                            <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
-                        </div>
-                    </div>
-                    <div class="flex mb-4">
-                        <img src="https://placehold.co/120x80" alt="Thumbnail of a video about Septoplasty surgery"
-                            class="w-24 h-16 rounded-lg">
-                        <div class="ml-4">
-                            <h3 class="text-lg font-bold text-green-700">What is Septoplasty sugery?</h3>
-                            <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
-                        </div>
-                    </div>
-                    <div class="flex mb-4">
-                        <img src="https://placehold.co/120x80" alt="Thumbnail of a video about Septoplasty surgery"
-                            class="w-24 h-16 rounded-lg">
-                        <div class="ml-4">
-                            <h3 class="text-lg font-bold text-green-700">What is Septoplasty sugery?</h3>
-                            <p class="text-gray-600">What is Septoplasty sugery?What is Septoplasty sugery?</p>
-                        </div>
-                    </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Myringoplasty">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Myringotomy">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Septoplasty">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Turbinectomy">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="FESS">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Nasal Polypectomy">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Snoring & Sleep Apnea Surgery">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Mastoidectomy">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="MLS">
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="surgery-box">
+                    <img src="images/service.png" alt="Removal of Neck Swelling">
                 </div>
             </div>
         </div>
@@ -860,7 +733,7 @@
                         </div>
                     </div>
                     <div class="col-xl-6 ps-xl-4 mt-4 mt-xl-0 pq-p-45">
-                        <div class="pq-section pq-style-1 text-left">
+                        <div class="pq-section pq-style-1 text-left" style="display: none;">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.5523063800465!2d77.1001897!3d28.7030359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x457337d44efc2e7d%3A0x15c2d6e26dcaa6e1!2sPerformdigi%20Monetize!5e0!3m2!1sen!2sin!4v1741166366670!5m2!1sen!2sin"
                                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -1088,8 +961,5 @@
 
 <script>'undefined' === typeof _trfq || (window._trfq = []); 'undefined' === typeof _trfd && (window._trfd = []), _trfd.push({ 'tccl.baseHost': 'secureserver.net' }, { 'ap': 'cpbh-mt' }, { 'server': 'sg2plmcpnl492384' }, { 'dcenter': 'sg2' }, { 'cp_id': '9858662' }, { 'cp_cache': '' }, { 'cp_cl': '8' }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script>
 <script src='../../../signals/js/clients/scc-c2/scc-c2.min.js'></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
 </html>
