--- a/index.html
+++ b/index.html
@@ -118,31 +118,31 @@
                                              class="fa fa-chevron-down pq-submenu-icon"></i>
                                           <ul class="sub-menu">
                                              <li class="menu-item">
-                                                <a href="index.html">Home 1</a>
+                                                <a href="storage/index.html">Home 1</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-2.html">Home 2</a>
+                                                <a href="storage/index-2.html">Home 2</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-3.html">Home 3</a>
+                                                <a href="storage/index-3.html">Home 3</a>
                                              </li>
                                              <li class="menu-item current-menu-item">
-                                                <a href="index-4.html" aria-current="page">Home 4</a>
+                                                <a href="storage/index-4.html" aria-current="page">Home 4</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-5.html">Home 5</a>
+                                                <a href="storage/index-5.html">Home 5</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-6.html">Home 6</a>
+                                                <a href="storage/index-6.html">Home 6</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-7.html">Home 7</a>
+                                                <a href="storage/index-7.html">Home 7</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-8.html">Home 8</a>
+                                                <a href="storage/index-8.html">Home 8</a>
                                              </li>
                                              <li class="menu-item">
-                                                <a href="index-9.html">Home 9</a>
+                                                <a href="storage/index-9.html">Home 9</a>
                                              </li>
                                           </ul>
                                        </li>
