--- a/index.html
+++ b/index.html
@@ -770,20 +770,23 @@
                                     </div>
                                     <div class="col-xl-4 col-md-4">
                                        <ul>
-                                          <li><a href="about-us.html">About Us</a></li>
-                                          <li><a href="about-us.html">About Us</a></li>
-                                          <li><a href="about-us.html">About Us</a></li>
+                                          <li><a href="about-us.html">Septoplasty     </a></li>
+                                          <li><a href="about-us.html">Turbinectomy</a></li>
+                                          <li><a href="about-us.html">FESS</a></li>
+                                          <li><a href="about-us.html">Nasal Polypectomy</a></li>
 
                                        </ul>
                                     </div>
                                     <div class="col-xl-4 col-md-4">
                                        <ul>
-                                          <li><a href="about-us.html">About Us</a></li>
-                                          <li><a href="about-us.html">About Us</a></li>
-                                          <li><a href="about-us.html">About Us</a></li>
+                                          <li><a href="about-us.html">Snoring & Sleep Apnea Surgery    </a></li>
+                                          <li><a href="about-us.html">MastoidectomyAbout Us</a></li>
+                                          <li><a href="about-us.html">MLS</a></li>
+                                          <li><a href="about-us.html">Removal of Neck Swelling</a></li>
 
                                        </ul>
                                     </div>
+                                   
 
                                  </div>
                               </div>
