--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 
                         <div class="container">
                            <div class="row">
-                              <div class="col-xl-3 col-md-6">
+                              <div class="col-xl-2 col-md-2">
                                  <div class="pq-footer-block">
                                     <img src="images/logo.webp" class="pq-footer-logo img-fluid"
                                        alt="medicate-footer-logo" style="100%">
@@ -756,28 +756,34 @@
 
                                  </div>
                               </div>
-                              <div class="col-xl-6  col-md-6">
+                              <div class="col-xl-7  col-md-7">
                                  <h4 class="footer-title">Quick Links</h4>
                                  <div class="row">
                                     <div class="col-xl-4 col-md-4">
-                                       <ul>
-                                          <li><a href="about-us.html">Tonsillectomy </a></li>
-                                          <li><a href="about-us.html">Adenoidectomy</a></li>
-                                          <li><a href="about-us.html">Myringoplasty</a></li>
-                                          <li><a href="about-us.html">Myringotomy</a></li>
-
-                                       </ul>
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Tonsillectomy </a></li>
+                                             <li><a href="about-us.html">Adenoidectomy</a></li>
+                                             <li><a href="about-us.html">Myringoplasty</a></li>
+                                             <li><a href="about-us.html">Myringotomy</a></li>
+   
+                                          </ul>
+                                       </div>
                                     </div>
                                     <div class="col-xl-4 col-md-4">
-                                       <ul>
-                                          <li><a href="about-us.html">Septoplasty     </a></li>
-                                          <li><a href="about-us.html">Turbinectomy</a></li>
-                                          <li><a href="about-us.html">FESS</a></li>
-                                          <li><a href="about-us.html">Nasal Polypectomy</a></li>
-
-                                       </ul>
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Septoplasty     </a></li>
+                                             <li><a href="about-us.html">Turbinectomy</a></li>
+                                             <li><a href="about-us.html">FESS</a></li>
+                                             <li><a href="about-us.html">Nasal Polypectomy</a></li>
+   
+                                          </ul>
+                                       </div>
+                                       
                                     </div>
                                     <div class="col-xl-4 col-md-4">
+                                      <div class="spacce">
                                        <ul>
                                           <li><a href="about-us.html">Snoring & Sleep Apnea Surgery    </a></li>
                                           <li><a href="about-us.html">MastoidectomyAbout Us</a></li>
@@ -785,6 +791,7 @@
                                           <li><a href="about-us.html">Removal of Neck Swelling</a></li>
 
                                        </ul>
+                                      </div>
                                     </div>
                                    
 
@@ -810,7 +817,7 @@
                                        </div>
                                     </div> -->
 
-                              <div class="col-xl-3  col-md-6">
+                              <div class="col-xl-3  col-md-3">
                                  <div class="pq-footer-block">
                                     <h4 class="footer-title">Contact Us</h4>
                                     <div class="row">
