--- a/index.html
+++ b/index.html
@@ -399,34 +399,41 @@
    </rs-module-wrap>
 
 
-   <!--Section about-us start-->
-   <!-- <section class="pq-bg-grey">
-               <div class="container">
-                  <div class="row align-items-center">
-                     <div class="col-lg-6"> <img src="images/About-us/1.jpeg" class="img-fluid pe-xl-5 wow fadeInLeft" alt="home"> </div>
-                     <div class="col-lg-6 align-self-center mt-lg-0 mt-4">
-                       <div class="col-lg-12">
-                        <div class="pq-section pq-style-1 text-center"> <span class="pq-section-sub-title">FACILITIES WE HAVE</span>
-                           <h5 class="pq-section-title">What Facilities We Provided</h5> </div>
-                        </div>
-                        <ul class="pq-list-check pq-text-dark mt-3 mb-4">
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Comprehensive Inpatient Services</span></li>
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Medical And Surgical Services</span></li>
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Outpatient Services</span></li>
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Medicine & instrument</span></li>
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Specialised Support Service</span></li>
-                           <li><i aria-hidden="true" class="ion ion-checkmark-round"></i><span>Instant Operation & Appointment</span></li>
-                        </ul>
-                        <a class="pq-button pq-button-flat mt-3" href="about-us.html">
-                           <div class="pq-button-block"> <span class="pq-button-text">Read More</span> <i class="ion ion-plus-round"></i> </div>
-                        </a>
-                     </div>
-                  </div>
+   <!--Section Start-->
+   <section class="pq-home2-about">
+      <div class="container">
+         <div class="row align-items-center">
+            <div class="col-lg-6 mt-4 mt-lg-0">
+               <div class="pq-section pq-style-1 text-left"> <span class="pq-section-sub-title">About the Doctor</span>
+                  <h5 class="pq-section-title" style="color: #4C906F; font-size:40px; ">Dr. (Major) Rajesh Bhardwaj MBBS
+                     (AFMC), MS, DNB, DLO, DHA</h5>
+                  <p class="pq-section-description">Dr. (Major) Bhardwaj graduated from Armed Forces Medical College
+                     (AFMC), Pune in 1982 and served in the Indian Army for
+                     15 years, where he gained vast clinical experience as an ENT specialist. He has served in the
+                     largest
+                     and busiest
+                     hospitals of the armed forces including Command Hospitals at Pune and Chandigarh and at the Army
+                     Hospital (R&R), Delhi
+                     Cantt.
+                  </p>
                </div>
-            </section> -->
-   <!--Section about-us End-->
-   <!--Section service start-->
-   
+
+               <a class="pq-button pq-button-flat" href="about-us.html">
+                  <div class="pq-button-block"> <span class="pq-button-text">Read More</span> <i
+                        class="ion ion-plus-round"></i> </div>
+               </a>
+            </div>
+
+            <div class="col-lg-6">
+               <div class="about-us-img">
+                  <img src="images/About-us/2.jpg" class="img-fluid pq-image1 wow fadeInRight " alt="home">
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!--Section End-->
+
    <section>
       <div class="container text-center mt-4">
          <h3 class="fw-bold">ALL ENT SURGERIES</h3>
@@ -766,34 +773,34 @@
                                              <li><a href="about-us.html">Adenoidectomy</a></li>
                                              <li><a href="about-us.html">Myringoplasty</a></li>
                                              <li><a href="about-us.html">Myringotomy</a></li>
-   
+
                                           </ul>
                                        </div>
                                     </div>
                                     <div class="col-xl-4 col-md-4">
                                        <div class="spacce">
                                           <ul>
-                                             <li><a href="about-us.html">Septoplasty     </a></li>
+                                             <li><a href="about-us.html">Septoplasty </a></li>
                                              <li><a href="about-us.html">Turbinectomy</a></li>
                                              <li><a href="about-us.html">FESS</a></li>
                                              <li><a href="about-us.html">Nasal Polypectomy</a></li>
-   
+
                                           </ul>
                                        </div>
-                                       
+
                                     </div>
                                     <div class="col-xl-4 col-md-4">
-                                      <div class="spacce">
-                                       <ul>
-                                          <li><a href="about-us.html">Snoring & Sleep Apnea Surgery    </a></li>
-                                          <li><a href="about-us.html">MastoidectomyAbout Us</a></li>
-                                          <li><a href="about-us.html">MLS</a></li>
-                                          <li><a href="about-us.html">Removal of Neck Swelling</a></li>
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Snoring & Sleep Apnea Surgery </a></li>
+                                             <li><a href="about-us.html">MastoidectomyAbout Us</a></li>
+                                             <li><a href="about-us.html">MLS</a></li>
+                                             <li><a href="about-us.html">Removal of Neck Swelling</a></li>
 
-                                       </ul>
-                                      </div>
+                                          </ul>
+                                       </div>
                                     </div>
-                                   
+
 
                                  </div>
                               </div>
