--- a/storage/index-3.html
+++ b/storage/index-3.html
@@ -260,11 +260,11 @@
                </rs-layer>
                <!--
                      -->
-               <rs-layer id="slider-29-slide-99-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
+               <rs-layer id="slider-29-slide-99-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
                   laboratory
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-99-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-99-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
@@ -273,7 +273,7 @@
                   fun in the process
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-99-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-99-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
@@ -286,11 +286,11 @@
                </rs-layer>
                <!--
                      -->
-               <rs-layer id="slider-29-slide-103-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
+               <rs-layer id="slider-29-slide-103-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
                   laboratory
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-103-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-103-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
@@ -299,7 +299,7 @@
                   fun in the process
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-103-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-103-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
@@ -312,11 +312,11 @@
                </rs-layer>
                <!--
                      -->
-               <rs-layer id="slider-29-slide-104-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
+               <rs-layer id="slider-29-slide-104-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="x:c;y:m;yo:-140px,-115px,-87px,-65px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-frame_0="y:50,41,31,19;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Welcome to the smart
                   laboratory
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-104-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-104-layer-2" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:102px,109px,100px,72px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read more </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
@@ -325,7 +325,7 @@
                   fun in the process
                </rs-layer>
                <!--
-                     --><a id="slider-29-slide-104-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
+                     --><a id="slider-29-slide-104-layer-4" class="rs-layer pq-button rev-btn" href="contact-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="x:c;xo:-90px,-63px,-60px,-68px;y:m;yo:97px,88px,111px,66px;" data-text="w:normal;s:14,14,14,12;l:22,22,22,20;fw:600;" data-dim="minh:0px,none,none,none;" data-padding="t:15,12,14,10;r:30,25,22,20;b:15,12,14,10;l:30,25,22,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="y:50,41,31,19;" data-frame_1="st:1910;sp:1000;sR:1910;" data-frame_999="o:0;st:w;sR:6090;" data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;e:power1.inOut;bri:120%;" style="z-index:11;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">contact us </span><i class="ion ion-plus-round"></i>
                </a>
                <!--
                      -->
