--- a/storage/index.html
+++ b/storage/index.html
@@ -364,7 +364,7 @@
                </rs-layer>
                   <!--
                   -->
-                  <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="xo:41px,38px,38px,39px;y:m;yo:-197px,-154px,-121px,-78px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-dim="w:auto,auto,auto,144px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Passion for caring
+                  <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="xo:41px,38px,38px,39px;y:m;yo:-197px,-154px,-121px,-78px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-dim="w:auto,auto,auto,144px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Passion for caring
                </rs-layer>
                   <!--
                   -->
@@ -376,7 +376,7 @@
                   <rs-layer id="slider-24-slide-84-layer-4" data-type="shape" data-rsp_ch="on" data-xy="xo:30px;yo:202px,155px,114px,85px;" data-text="w:normal;s:20,15,11,6;l:0,19,14,8;" data-dim="w:164px,158px,160px,155px;h:30px,30px,30px,25px;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;" style="z-index:8;background-color:#d3e9fb;">
                </rs-layer>
                   <!--
-                  --><a id="slider-24-slide-84-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1300;sp:1000;sR:1300;" data-frame_999="o:0;st:w;sR:6700;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
+                  --><a id="slider-24-slide-84-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1300;sp:1000;sR:1300;" data-frame_999="o:0;st:w;sR:6700;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
                </a>
                   <!--
                   -->
@@ -390,7 +390,7 @@
                </rs-layer>
                   <!--
                   -->
-                  <rs-layer id="slider-24-slide-85-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="xo:41px,38px,38px,37px;y:m;yo:-197px,-154px,-121px,-75px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;sR:1100;" data-frame_999="o:0;st:w;sR:6900;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Great Experience In Bulding
+                  <rs-layer id="slider-24-slide-85-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="xo:41px,38px,38px,37px;y:m;yo:-197px,-154px,-121px,-75px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;sR:1100;" data-frame_999="o:0;st:w;sR:6900;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">Great Experience In Bulding
                </rs-layer>
                   <!--
                   -->
@@ -403,7 +403,7 @@
                   <rs-layer id="slider-24-slide-85-layer-4" data-type="shape" data-rsp_ch="on" data-xy="xo:30px;yo:202px,155px,114px,86px;" data-text="w:normal;s:20,15,11,6;l:0,19,14,8;" data-dim="w:233px,227px,227px,212px;h:30px,30px,30px,25px;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;" data-frame_999="o:0;st:w;" style="z-index:8;background-color:#d3e9fb;">
                </rs-layer>
                   <!--
-                  --><a id="slider-24-slide-85-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1900;sp:1000;sR:1800;" data-frame_999="o:0;st:w;sR:6200;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
+                  --><a id="slider-24-slide-85-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1900;sp:1000;sR:1800;" data-frame_999="o:0;st:w;sR:6200;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
                </a>
                   <!--
                   -->
@@ -417,7 +417,7 @@
                </rs-layer>
                   <!--
                   -->
-                  <rs-layer id="slider-24-slide-86-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on" data-xy="xo:41px,38px,38px,37px;y:m;yo:-197px,-154px,-121px,-81px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;sR:1100;" data-frame_999="o:0;st:w;sR:6900;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">higher level of care
+                  <rs-layer id="slider-24-slide-86-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on" data-xy="xo:41px,38px,38px,37px;y:m;yo:-197px,-154px,-121px,-81px;" data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;sR:1100;" data-frame_999="o:0;st:w;sR:6900;" style="z-index:9;font-family:'Quicksand';text-transform:uppercase;">higher level of care
                </rs-layer>
                   <!--
                   -->
@@ -429,7 +429,7 @@
                   <rs-layer id="slider-24-slide-86-layer-4" data-type="shape" data-rsp_ch="on" data-xy="xo:30px;yo:202px,155px,114px,81px;" data-text="w:normal;s:20,15,11,6;l:0,19,14,8;" data-dim="w:178px,171px,172px,158px;h:30px,30px,30px,25px;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1100;sp:1000;" data-frame_999="o:0;st:w;" style="z-index:8;background-color:#d3e9fb;">
                </rs-layer>
                   <!--
-                  --><a id="slider-24-slide-86-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1900;sp:1000;sR:1800;" data-frame_999="o:0;st:w;sR:6200;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
+                  --><a id="slider-24-slide-86-layer-6" class="rs-layer pq-button rev-btn" href="about-us.html" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:27px,30px,30px,30px;y:m;yo:93px,97px,104px,37px;" data-text="w:normal;s:14,16,16,12;l:22,24,30,20;fw:600;a:left,left,center,center;" data-dim="minh:0px,none,none,none;" data-padding="t:15,15,10,10;r:30,30,25,20;b:15,15,10,10;l:30,30,25,20;" data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;" data-frame_1="st:1900;sp:1000;sR:1800;" data-frame_999="o:0;st:w;sR:6200;" data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;" style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span class="text">Read More</span><i class="ion ion-plus-round"></i>
                </a>
                   <!--
                   -->
