--- a/test.html
+++ b/test.html
@@ -389,7 +389,7 @@
                     </rs-layer>
                     <!--
                          -->
-                    <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on"
+                    <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on"
                         data-xy="xo:41px,38px,38px,39px;y:m;yo:-197px,-154px,-121px,-78px;"
                         data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-dim="w:auto,auto,auto,144px;"
                         data-frame_0="x:50,39,29,17;" data-frame_1="st:600;sp:1000;sR:600;"
@@ -424,7 +424,7 @@
                         data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;"
                         data-frame_1="st:1300;sp:1000;sR:1300;" data-frame_999="o:0;st:w;sR:6700;"
                         data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;"
-                        style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span
+                        style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span
                             class="text">Read More</span><i class="ion ion-plus-round"></i>
                     </a>
                     <!--
