--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                </rs-layer>
                <!--
                          -->
-               <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#2490eb" data-rsp_ch="on"
+               <rs-layer id="slider-24-slide-84-layer-1" data-type="text" data-color="#4C906F" data-rsp_ch="on"
                   data-xy="xo:41px,38px,38px,39px;y:m;yo:-197px,-154px,-121px,-78px;"
                   data-text="w:normal;s:14,14,14,13;l:22,22,26,21;fw:600;" data-dim="w:auto,auto,auto,144px;"
                   data-frame_0="x:50,39,29,17;" data-frame_1="st:600;sp:1000;sR:600;" data-frame_999="o:0;st:w;sR:7400;"
@@ -388,7 +388,7 @@
                   data-border="bor:3px,3px,3px,3px;" data-frame_0="x:50,39,29,17;"
                   data-frame_1="st:1300;sp:1000;sR:1300;" data-frame_999="o:0;st:w;sR:6700;"
                   data-frame_hover="bgc:#14457b;bor:3px,3px,3px,3px;bos:solid;sp:100;bri:120%;"
-                  style="z-index:12;background-color:#2490eb;font-family:'Quicksand';text-transform:uppercase;"><span
+                  style="z-index:12;background-color:#4C906F;font-family:'Quicksand';text-transform:uppercase;"><span
                      class="text">Read More</span><i class="ion ion-plus-round"></i>
                </a>
                <!--
@@ -749,82 +749,118 @@
          </div>
          <div class="pq-subscribe align-items-center">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-12">
-                        <div class="pq-subscribe-bg">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-2 col-md-2">
-                                        <div class="pq-footer-block">
-                                            <img src="images/logo.webp" class="pq-footer-logo img-fluid" alt="medicate-footer-logo" style="width: 100%;">
-                                        </div>
+               <div class="row align-items-center">
+                  <div class="col-lg-12">
+                     <div class="pq-subscribe-bg">
+
+                        <div class="container">
+                           <div class="row">
+                              <div class="col-xl-2 col-md-2">
+                                 <div class="pq-footer-block">
+                                    <img src="images/logo.webp" class="pq-footer-logo img-fluid"
+                                       alt="medicate-footer-logo" style="100%">
+
+
+                                 </div>
+                              </div>
+                              <div class="col-xl-7  col-md-7">
+                                 <h4 class="footer-title">Quick Links</h4>
+                                 <div class="row">
+                                    <div class="col-xl-4 col-md-4">
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Tonsillectomy </a></li>
+                                             <li><a href="about-us.html">Adenoidectomy</a></li>
+                                             <li><a href="about-us.html">Myringoplasty</a></li>
+                                             <li><a href="about-us.html">Myringotomy</a></li>
+
+                                          </ul>
+                                       </div>
                                     </div>
-                                    <div class="col-xl-7 col-md-7">
-                                        <h4 class="footer-title">Quick Links</h4>
-                                        <div class="row">
-                                            <div class="col-xl-4 col-md-4">
-                                                <div class="spacce">
-                                                    <ul>
-                                                        <li><a href="about-us.html">Tonsillectomy</a></li>
-                                                        <li><a href="about-us.html">Adenoidectomy</a></li>
-                                                        <li><a href="about-us.html">Myringoplasty</a></li>
-                                                        <li><a href="about-us.html">Myringotomy</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <div class="col-xl-4 col-md-4">
-                                                <div class="spacce">
-                                                    <ul>
-                                                        <li><a href="about-us.html">Septoplasty</a></li>
-                                                        <li><a href="about-us.html">Turbinectomy</a></li>
-                                                        <li><a href="about-us.html">FESS</a></li>
-                                                        <li><a href="about-us.html">Nasal Polypectomy</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <div class="col-xl-4 col-md-4">
-                                                <div class="spacce">
-                                                    <ul>
-                                                        <li><a href="about-us.html">Snoring & Sleep Apnea Surgery</a></li>
-                                                        <li><a href="about-us.html">Mastoidectomy</a></li>
-                                                        <li><a href="about-us.html">MLS</a></li>
-                                                        <li><a href="about-us.html">Removal of Neck Swelling</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="col-xl-4 col-md-4">
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Septoplasty </a></li>
+                                             <li><a href="about-us.html">Turbinectomy</a></li>
+                                             <li><a href="about-us.html">FESS</a></li>
+                                             <li><a href="about-us.html">Nasal Polypectomy</a></li>
+
+                                          </ul>
+                                       </div>
+
                                     </div>
-                                    <div class="col-xl-3 col-md-3">
-                                        <div class="pq-footer-block">
-                                            <h4 class="footer-title">Contact Us</h4>
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <ul class="pq-contact">
-                                                        <li><a href="tel:+1800001658"><i class="fas fa-phone"></i><span> +1800-001-658</span></a></li>
-                                                        <li><a href="mailto:info@peacefulthemes.com"><i class="fas fa-envelope"></i><span>info@peacefulthemes.com</span></a></li>
-                                                        <li><i class="fas fa-map-marker"></i><span>Themeforest, Envato HQ 24 Fifth st., Los Angeles, USA</span></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="col-xl-4 col-md-4">
+                                       <div class="spacce">
+                                          <ul>
+                                             <li><a href="about-us.html">Snoring & Sleep Apnea Surgery </a></li>
+                                             <li><a href="about-us.html">MastoidectomyAbout Us</a></li>
+                                             <li><a href="about-us.html">MLS</a></li>
+                                             <li><a href="about-us.html">Removal of Neck Swelling</a></li>
+
+                                          </ul>
+                                       </div>
                                     </div>
-                                    <div class="col-xl-12 col-md-12">
-                                        <div class="pq-footer-social" style="display: flex; justify-content: center;">
-                                            <ul style="list-style: none; padding: 0; margin: 0; display: flex; gap: 15px;">
-                                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                            </ul>
-                                        </div>
+
+
+                                 </div>
+                              </div>
+                              <!-- <div class="col-xl-6  col-md-6">
+                                       <div class="pq-footer-block">
+                                          <h4 class="footer-title">Quick Links</h4>
+                                          <div class="menu-useful-links-container">
+                                             <ul id="menu-useful-links" class="menu">
+                                                <li><a href="about-us.html">About Us</a></li>
+                                                <li><a href="contact-us.html">Contact Us</a></li>
+                                                <li><a href="our-services.html">Our Services</a></li>
+                                                <li><a href="our-process.html">Our Process</a></li>
+                                                <li><a href="doctor-1.html">Doctors 1</a></li>
+                                                <li><a href="faq.html">FAQ</a></li>
+                                                <li><a href="our-doctor.html">Doctors 2</a></li>
+                                                <li><a href="home-visit.html">Departments</a></li>
+                                                <li><a href="make-appoinment.html">Events</a></li>
+                                                <li><a href="our-plan.html">Member</a></li>
+                                             </ul>
+                                          </div>
+                                       </div>
+                                    </div> -->
+
+                              <div class="col-xl-3  col-md-3">
+                                 <div class="pq-footer-block">
+                                    <h4 class="footer-title">Contact Us</h4>
+                                    <div class="row">
+                                       <div class="col-sm-12">
+                                          <ul class="pq-contact">
+                                             <li> <a href="tel:+1800001658"><i class="fas fa-phone"></i>
+                                                   <span> +1800-001-658</span>
+                                                </a> </li>
+                                             <li> <a href="mailto:info@peacefulthemes.com"><i
+                                                      class="fas fa-envelope"></i><span>info@peacefulthemes.com</span></a>
+                                             </li>
+                                             <li> <i class="fas fa-map-marker"></i> <span>
+                                                   Themeforest, Envato HQ 24 Fifth st., Los Angeles, USA </span> </li>
+                                          </ul>
+                                       </div>
                                     </div>
-                                </div>
-                            </div>
+                                 </div>
+                              </div>
+                              <div class="col-xl-12 col-md-12 ">
+                                 <div class="pq-footer-social">
+                                    <ul>
+                                       <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                       <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                       <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                       <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                                    </ul>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                </div>
+
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
+         </div>
          <div class="pq-copyright-footer">
             <div class="container">
                <div class="row">
