--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <body>
    <!--loading start-->
-   <div id="pq-loading">
+   <!-- <div id="pq-loading">
       <div id="pq-loading-center">
          <img src="images/logo.webp" class="img-fluid" alt="loading">
       </div>
-   </div>
+   </div> -->
    <!--loading End-->
 
    <!--=================================
